# grind

./: .gitignore  Cargo.toml  README.md  class-finder.py  grind.yml  install.sh  license  notes.txt  test-note.txt
.github/workflows/: releases.yml
src/: build.rs  config.rs  install.rs  integrity.rs  java.rs  lock.rs  main.rs  manage.rs  metadata.rs  mock.rs  pom.rs  run.rs  scaffold.rs  tasks.rs  tests.rs  uberjar.rs  util.rs
