[package]
name = "grind"
version = "0.4.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"], default-features=false }
serde_json = "1.0"
serde-xml-rs = "0.5"
urlencoding = "2.1.3"
regex = "1.11.3"
semver = "1.0.27"
