[package]
name = "grind"
version = "0.7.2"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"], default-features=false }
serde_json = "1.0"
serde-xml-rs = "0.5"
urlencoding = "2.1.3"
regex = "1.11.3"
serde_path_to_error = "0.1.20"
quick-xml = { version = "0.38.3", features = ["serialize"] }
md5 = "0.8.0"
walkdir = "2.5.0"
zip = "6.0.0"
